tests/NormalTests/paczka1/fuzzy1/68566991.err
Error in line 1: cURCcsAqWkN S461 79,0
Error in line 10: YfUlxs6Êk55 S565 59,8
Error in line 12: BjgMM A310 79,4
Error in line 8: CWJAFoSI39 S524 71,3
Error in line 29: By7SSR S461 16,5
Error in line 27: cURCcsAqWkN S461 17,4
Error in line 30: By7SSR S524 33,8
